force-app/main/default/objects/IdentificationDocument__c/IdentificationDocument__c.object-meta.xml
<CustomObject>
    <description>Identification Document for Applicants</description>
    <label>Identification Document</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Identification Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>