force-app/main/default/objects/IdentificationDocument__c/fields/Applicant__c.field-meta.xml
<CustomField>
    <fullName>Applicant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>relationship between applicant and identification Documents</description>
    <label>Applicant</label>
    <referenceTo>Applicant__c</referenceTo>
    <relationshipLabel>Identification Documents</relationshipLabel>
    <relationshipName>IdentificationDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>