force-app/main/default/objects/IdentificationDocument__c/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <description>Identity Document Number</description>
    <label>Document Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>