force-app/main/default/objects/IdentificationDocument__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Document Type</description>
    <inlineHelpText>Document Type</inlineHelpText>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentType</valueSetName>
    </valueSet>
</CustomField>