force-app/main/default/objects/IdentificationDocument__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Expiration Date</description>
    <inlineHelpText>Expiration Date</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>