force-app/main/default/objects/IdentificationDocument__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <description>Height of identity in Inches</description>
    <label>Height</label>
    <length>40</length>
    <type>Text</type>
</CustomField>