force-app/main/default/objects/IdentificationDocument__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Issue Date</description>
    <inlineHelpText>Issue Date</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>