force-app/main/default/objects/IdentificationDocument__c/fields/IssuingCountry__c.field-meta.xml
<CustomField>
    <fullName>IssuingCountry__c</fullName>
    <description>Issuing Country</description>
    <label>Issuing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>