force-app/main/default/objects/IdentificationDocument__c/fields/PrimaryContentDocumentID__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContentDocumentID__c</fullName>
    <description>Primary Content Document ID</description>
    <label>Primary Content Document ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>