force-app/main/default/objects/IdentificationDocument__c/fields/VerifiedBy__c.field-meta.xml
<CustomField>
    <fullName>VerifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Verified By</description>
    <label>Verified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>IdentificationDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>