force-app/main/default/objects/IdentificationDocument__c/fields/VerifiedOn__c.field-meta.xml
<CustomField>
    <fullName>VerifiedOn__c</fullName>
    <description>Verified On</description>
    <label>Verified On</label>
    <type>DateTime</type>
</CustomField>