force-app/main/default/objects/IdentificationDocument__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Weight of the identity in pounds</description>
    <label>Weight</label>
    <length>40</length>
    <type>Text</type>
</CustomField>