force-app/main/default/objects/IdentificationDocument__c/validationRules/ExpDateCannotBeLaterThanStart.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpDateCannotBeLaterThanStart</fullName>
    <active>true</active>
    <description
  >Error message when the expiration date is earlier than the issue date.</description>
    <errorConditionFormula
  >IssueDate__c &gt; ExpirationDate__c</errorConditionFormula>
    <errorMessage
  >The expiration date can&apos;t be earlier than the issue date.</errorMessage>
</ValidationRule>