force-app/main/default/objects/IdentificationDocument__c/validationRules/IssueDateCannotBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>IssueDateCannotBeInFuture</fullName>
    <active>true</active>
    <description
  >Error message when the issue date is in the future.</description>
    <errorConditionFormula>IssueDate__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>The issue date can&apos;t be in the future.</errorMessage>
</ValidationRule>