force-app/main/default/objects/IdentificationDocument__c/validationRules/VerificationDateTimeCannotBeInFuture.validationRule-meta.xml
<ValidationRule>
    <fullName>VerificationDateTimeCannotBeInFuture</fullName>
    <active>true</active>
    <description
  >Error message when the verification date and time are in the future.</description>
    <errorConditionFormula>VerifiedOn__c &gt; NOW()</errorConditionFormula>
    <errorMessage
  >Verification date and time can&apos;t be in the future.</errorMessage>
</ValidationRule>